tests/valid_pascal_programs/for_example.pas
program ForExample;
var
  i: integer;
begin
  for i := 10 to 19 do
  begin
    writeln ('inc i=', i);
  end;
end.
