tests/invalid_pascal_programs/for_with_undefined_variable.pas
program InvalidExample;
begin
  for i := 10 to 19 do
  begin
    writeln ('inc i=', i);
  end;
end.
